This commit adds comments correctly

--- a/boilerplate_template.html
+++ b/boilerplate_template.html
@@ -1,14 +1,15 @@
-# This is a boilerplate template for an html webpage
-# You can type this manually or type "!" and enter to create this template automatically
+<!--This is a boilerplate template for an html webpage
+You can type this manually or type ! to create this template automatically-->
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+
+    <body>
+        <h1>Example</h1>
+    </body>
 </html>
