This commit was practice using git commit without message argument.
Shows example of body text and subject in commit

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -8,7 +8,8 @@
     <body>
         <!-- <a> is an anchor tag that creates a link to an html, or even videos, pdf, images, etc.
             <a> needs a destination, use href to add a hypertext reference attribute.
-            An attribute is made of 2 parts:a name, and value. however not all attributes require a value -->
+            An attribute is made of 2 parts:a name, and value. however not all attributes require a value.
+            Absolute links always needs to start with https:// -->
         <p><a href="https://www.theodinproject.com/about">About The Odin Project</a></p>
         
         <!-- To create a link in another tab: add a target attribute inside anchor tag <a>
@@ -48,6 +49,19 @@
 
         <p>
             <!-- It is good practice to use image size attributes after to layout the page without causing the page to jump and flash -->
-            <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo" height="310" width="310"> 
+            <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo" height="310" width="310">
         </p>
     </body>
+
+    <!-- Best practice for file structure:
+     have an img folder, a css folder, a js folder. Keep folder and file names lowercase, and avoid spaces, use hyphens instead.
+     Avoid numbers and keep names short as well.
+     Name home webpage index.html. -->
+
+     <!-- Image formats:
+      - jpg: great for photos or images with lots of gradient int hem, they dont allow for transparent pixels
+      - GIF: for simple animations, limited in terms of colour palette, dont use for photos.
+      - PNG: great for anything thats not photo or animated. Excellent fit for icons, diagrams and logos, etc.
+      - SVG: vector based graphics format, meaning it can scale up or down to any dimension without quality loss. Great for responsive design. Good for all same use cases as PNGs -->
+
+    <!-- This text was added for practice commiting with good practice -->
