Add 7 seven rules of a good commit
This adds 7 seven rules as a comment to help with
best practice

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -64,4 +64,12 @@
       - PNG: great for anything thats not photo or animated. Excellent fit for icons, diagrams and logos, etc.
       - SVG: vector based graphics format, meaning it can scale up or down to any dimension without quality loss. Great for responsive design. Good for all same use cases as PNGs -->
 
-    <!-- This text was added for practice commiting with good practice -->
+    <!-- This text was added for practice commiting with good practice:
+     Seven rules of a good commit:
+     1) Separate subject from body with blank line
+     2) limit subject to 50 characters
+     3) capitilise the subject
+     4) do not end the subject line with a period
+     5) use the imperative mood in subject line
+     6) wrap the body at 72 characters
+     7) use the body to explain what and why vs how -->
