Add comments about Lists
comments were missing about ordered and unordered
lists

--- a/Lists.html
+++ b/Lists.html
@@ -7,13 +7,14 @@
     </head>
 
     <body>
-        <!-- This is an unordered list -->
+        <!-- This is an unordered list, it will list with bullet points -->
         <ul>
             <li>Item 1</li>
             <li>Item 2</li>
             <li>Item 3</li>
         </ul>
 
+        <!-- This is an ordered list, it will list with numbers -->
         <ol>
             <li>Item 1</li>
             <li>Item 2</li>
